[package]
name = "interval-tree-trial"
version = "0.1.0"
authors = ["shardul <shardul.aeer@somaiya.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interval-tree = { git = "https://github.com/zaeleus/interval-tree.git", tag = "v0.2.0" }
